--- a/hs-dual.cabal
+++ b/hs-dual.cabal
@@ -21,7 +21,7 @@ library
     exposed-modules:  MyLib UTLC LMM
     -- other-modules:
     -- other-extensions:
-    build-depends:    base
+    build-depends:    base, containers, transformers, mtl, megaparsec, haskeline
     hs-source-dirs:   src
     default-language: Haskell2010
 
