--- a/hs-dual.cabal
+++ b/hs-dual.cabal
@@ -18,7 +18,7 @@ common warnings
 
 library
     import:           warnings
-    exposed-modules:  MyLib UTLC LMM
+    exposed-modules:  MyLib UTLC UTLCext LMM
     -- other-modules:
     -- other-extensions:
     build-depends:    base, containers, transformers, mtl, megaparsec, haskeline
