--- a/hs-dual.cabal
+++ b/hs-dual.cabal
@@ -1,5 +1,5 @@
 cabal-version:      3.4
-name:               hs-dual
+name:               hoas-hs
 version:            0.1.0.0
 -- synopsis:
 -- description:
@@ -32,7 +32,7 @@ executable hs-dual
     -- other-extensions:
     build-depends:
         base,
-        hs-dual
+        hoas-hs
 
     hs-source-dirs:   app
     default-language: Haskell2010
@@ -47,4 +47,4 @@ test-suite hs-dual-test
     main-is:          Main.hs
     build-depends:
         base,
-        hs-dual
+        hoas-hs
