--- a/hs-dual.cabal
+++ b/hs-dual.cabal
@@ -18,7 +18,9 @@ common warnings
 
 library
     import:           warnings
-    exposed-modules:  MyLib UTLC UTLCext LMM PHOAS
+`    exposed-modules:
+        HOAS.Core HOAS.Reduction
+        MyLib UTLC UTLCext LMM PHOAS
     -- other-modules:
     -- other-extensions:
     build-depends:    base, containers, transformers, mtl, megaparsec, haskeline
