--- a/hs-dual.cabal
+++ b/hs-dual.cabal
@@ -21,7 +21,9 @@ library
     exposed-modules:  MyLib UTLC UTLCext LMM PHOAS
     -- other-modules:
     -- other-extensions:
-    build-depends:    base, containers, transformers, mtl, megaparsec, haskeline
+    build-depends:
+        base, containers, transformers, mtl,
+        megaparsec, prettyprinter, prettyprinter-ansi-terminal, haskeline
     hs-source-dirs:   src
     default-language: Haskell2010
 
