--- a/hs-dual.cabal
+++ b/hs-dual.cabal
@@ -42,7 +42,7 @@ executable hs-dual
 test-suite hs-dual-test
     import:           warnings
     default-language: Haskell2010
-    -- other-modules:
+    other-modules:    TestFocusing
     -- other-extensions:
     type:             exitcode-stdio-1.0
     hs-source-dirs:   test
