--- a/hs-dual.cabal
+++ b/hs-dual.cabal
@@ -27,7 +27,7 @@ library
     hs-source-dirs:   src
     default-language: Haskell2010
 
-executable hs-dual
+executable hoas-hs
     import:           warnings
     main-is:          Main.hs
     -- other-modules:
@@ -39,7 +39,7 @@ executable hs-dual
     hs-source-dirs:   app
     default-language: Haskell2010
 
-test-suite hs-dual-test
+test-suite hoas-hs-test
     import:           warnings
     default-language: Haskell2010
     other-modules:    TestFocusing
