--- a/hoas-hs.cabal
+++ b/hoas-hs.cabal
@@ -42,11 +42,12 @@ executable hoas-hs
 test-suite hoas-hs-test
     import:           warnings
     default-language: Haskell2010
-    other-modules:    TestFocusing
+    other-modules:    TestFocusing, ShowDifference, ComprehensiveFunTest
     -- other-extensions:
     type:             exitcode-stdio-1.0
     hs-source-dirs:   test
     main-is:          Main.hs
     build-depends:
         base,
-        hoas-hs
+        hoas-hs,
+        mtl
