--- a/hoas-hs.cabal
+++ b/hoas-hs.cabal
@@ -21,10 +21,14 @@ library
     exposed-modules:
         HOAS.Core HOAS.Reduction
         MyLib UTLC UTLCext LMM PHOAS
-    -- other-modules:
+    other-modules:
+        Bound.Try
+        Bound.NestedDT
+        Bound.NestedDT1
+        Bound.NestedDT2
     -- other-extensions:
     build-depends:
-        base, containers, transformers, mtl,
+        base, containers, transformers, mtl, bound,
         megaparsec, prettyprinter, prettyprinter-ansi-terminal, haskeline
     hs-source-dirs:   src
     default-language: Haskell2010
