--- a/hoas-hs.cabal
+++ b/hoas-hs.cabal
@@ -1,6 +1,6 @@
 cabal-version:      3.4
 name:               hoas-hs
-version:            4.0
+version:            5.0
 -- synopsis:
 -- description:
 license:            MIT
@@ -18,8 +18,13 @@ common warnings
 
 library
     import:           warnings
-    exposed-modules:  MyLib UTLC UTLCext LMM PHOAS
-    -- other-modules:
+    exposed-modules:  MyLib
+        UTLC
+        UTLCext
+        LMM
+        AEnH
+    other-modules:
+        PHOAS
     -- other-extensions:
     build-depends:
         base, containers, transformers, mtl,
@@ -42,7 +47,7 @@ executable hoas-hs
 test-suite hoas-hs-test
     import:           warnings
     default-language: Haskell2010
-    other-modules:    ComprehensiveFunTest
+    other-modules:    Test_LMM
     -- other-extensions:
     type:             exitcode-stdio-1.0
     hs-source-dirs:   test
